[project]
name = "curso-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.6.1",
    "duckduckgo-search>=8.1.1",
    "groq>=0.32.0",
    "ipykernel>=7.0.1",
    "jinja2>=3.1.6",
    "langchain-community>=0.4.1",
    "langchain-groq>=0.3.8",
    "langgraph>=0.6.10",
]
